# momo-paper

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  PLAYBOOK.md  README.md  SKILL.md  design-tokens.json  findings.md  install.sh  progress.md  prompt-contracts.md  pyproject.toml  requirements.txt  style-checklist.md  task_plan.md
json-engine/: mcp-tool.json  pyproject.toml  render.py  render_all.py
json-engine/data/: sample-case-study.json  sample-infographic-charts.json  sample-resume.json  sample-stats-report-charts.json  sample-timeline.json
json-engine/momo_paper/: charts.py  cli.py  engine.py
json-engine/momo_paper/examples/: sample-changelog.json  sample-faq-page.json  sample-one-pager.json  sample-portfolio.json  sample-process-flow.json  sample-research-summary.json  sample-stats-report-en.json
json-engine/momo_paper/schemas/: changelog.schema.json  equity_report.schema.json  faq_page.schema.json  letter.schema.json  portfolio.schema.json
json-engine/momo_paper/templates/: _base.html.j2  changelog.html.j2  equity-report.html.j2  faq-page.html.j2  infographic.html.j2  (+5 more)
json-engine/output/: case-study-zh.html  changelog-zh.html  infographic-charts.html  infographic-zh.html  long-doc-zh.html  research-summary-zh.html  stats-report-en.html
json-engine/schemas/: equity_report.schema.json  infographic.schema.json  one_pager.schema.json  stats_report.schema.json
json-engine/templates/: _base.html.j2  letter.html.j2  process-flow.html.j2  resume.html.j2  stats-report.html.j2
json-engine/tests/: conftest.py  test_charts.py  test_cli.py  test_engine.py
(+282 files in other folders)
