[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momo-paper-dsl"
version = "2.1.0"
description = "Momo Paper 2.0 Markdown DSL parser and HTML converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = ["playwright>=1.40"]

[project.scripts]
momo2 = "momo_dsl.cli:main"

[tool.setuptools.packages.find]
include = ["momo_dsl*"]

[tool.setuptools.package-data]
momo_dsl = ["styles/*.css"]
